force-app/main/default/objects/Question_Tracking__c/Question_Tracking__c.object-meta.xml
<CustomObject>
    <label>Question Tracking</label>
    <nameField>
        <displayFormat>QT-{000000}</displayFormat>
        <label>Question Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Tracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>