force-app/main/default/objects/Question_Tracking__c/fields/Deflection_Question__c.field-meta.xml
<CustomField>
    <fullName>Deflection_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Delection Question that was viewed</description>
    <inlineHelpText>The Delection Question that was viewed</inlineHelpText>
    <label>Deflection Question</label>
    <referenceTo>Deflection_Question__c</referenceTo>
    <relationshipLabel>Question Tracking</relationshipLabel>
    <relationshipName>CD_Question_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>