force-app/main/default/objects/Question_Tracking__c/fields/Question_Name__c.field-meta.xml
<CustomField>
    <fullName>Question_Name__c</fullName>
    <formula>Deflection_Question__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question Name</label>
    <type>Text</type>
</CustomField>