force-app/main/default/objects/Question_Tracking__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <description>The visit this question was viewed during</description>
    <inlineHelpText>The visit this question was viewed during</inlineHelpText>
    <label>Visit</label>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Question Tracking</relationshipLabel>
    <relationshipName>CD_Question_Tracking</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>